--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,16 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# Если перебои с сигналом блютуз, включить.
+# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# CONFIG_ZMK_EXT_POWER - если есть дисплей или подсветка - включить
+CONFIG_ZMK_EXT_POWER=n
+
+# CONFIG_ZMK_IDLE_TIMEOUT = Миллисекунды бездействия перед переходом в режим ожидания
+CONFIG_ZMK_IDLE_TIMEOUT=300000
+# CONFIG_ZMK_SLEEP = Включить поддержку глубокого сна
+CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT	=	Миллисекунды бездействия перед переходом в глубокий спящий режим
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1000000 
